--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -443,8 +443,8 @@ Additionally, it has been shown that individuals avoid cognitive effort only to 
 However, the relation of NFC and SVs might be confounded, since other studies utilizing the COG-ED paradigm found the association of NFC and SVs to disappear after correcting for performance [@Kramer2021] or found no association of NFC and SVs at all [@Crawford2021].
 On the other hand, task load has been shown to be a better predictor of SVs than task performance [@Culbreth2016; @Westbrook2013; @Westbrook2019], so more research is needed to shed light on this issue.
 
-The present study changes one fundamental assumption of the original COG-ED paradigm: That the easiest n-back level has the highest SV.
-We adapted the COG-ED paradigm in such a way that it allows the computation of SVs for different n-back levels without presuming that all individuals inherently prefer the easiest level.
+With he present study, we change <!-- in my opinion better: alter --> one fundamental assumption of the original COG-ED paradigm: That the easiest *n*-back level has the highest SV.
+We therfore adapted the COG-ED paradigm in such a way that it allows the computation of SVs for different *n*-back levels without presuming that all individuals inherently prefer the easiest level.
 Figure\ 1 illustrates how different modifications of the COG-ED paradigm return SVs that do or do not reflect the true preference of a hypothetical participant, who likes 2-back most, 3-back less, and 1-back least.
 The COG-ED paradigm sets the SV of 1-back to 1, regardless of the response pattern.
 Adding a comparison of 2-back and 3-back allows the SVs of those two levels to be more differentiated, but leaves the SV of 1-back unchanged.
@@ -458,11 +458,11 @@ This procedure allows to compute SVs based on actual individual preference inste
 Each level's SV is calculated as the mean of this level's SVs from all comparisons in which it appeared.
 If the participant has a clear preference for one level, this level's SV will be 1.
 If not, then no level's SV will be 1, but each level's SV can still be interpreted as an absolute and relative value, so each participant's ED behaviour can still be quantified.
-Since we also aim to establish this paradigm for the assessment of tasks with no objective task load, e.g. emotion regulation tasks, we call it the Cognitive and Emotion Regulation Effort Discounting Paradigm (CERED).
+Since we also aim to establish this paradigm for the assessment of tasks with no objective task load, e.g., emotion regulation tasks <!-- perhaps add ref. to the other ms. on this issue? -->, we call it the Cognitive and Emotion Regulation Effort Discounting Paradigm (CERED).
 In the present study, we will validate the CERED paradigm by conceptually replicating the findings of Westbrook et al. [-@Westbrook2013].
-Additionally, we will compare the ED behaviour of participants regarding the n-back task and an emotion regulation task.
-The full results of the latter will be published in a second Registered Report.
-The COG-ED paradigm has been applied to tasks with different domains before, showing that SVs across task domains correlate [@Crawford2021], but these tasks had an objective order of task load, which is not the case for emotion regulation.
+Additionally, we will compare the ED behaviour of participants regarding the *n*-back task and an emotion regulation task.
+The full results of the latter will be published in a second Registered Report<!-- again: add (interim) ref. -->.
+The COG-ED paradigm has been applied to tasks in different domains before, showing that SVs across task domains correlate [@Crawford2021], but these tasks had an objective order of task load, which is not the case for the choice of emotion regulation strategies or other paradigms where there is no objective order of task load.
 
 ```{r figure1, echo=FALSE, message=FALSE, warning=FALSE, fig.cap="An example for subjective values for an n-back task with three levels, returned by different modifications of the COG-ED paradigm for a participant with the true preference 2-back > 3-back > 1-back.", fig.pos="H"} 
   
