--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -454,7 +454,7 @@ Additionally, it has been shown that individuals avoid cognitive effort only to 
 However, the relation of NFC and SVs might be confounded, since other studies utilizing the COG-ED paradigm found the association of NFC and SVs to disappear after correcting for performance [@Kramer2021] or found no association of NFC and SVs at all [@Crawford2021].
 On the other hand, task load has been shown to be a better predictor of SVs than task performance [@Culbreth2016; @Westbrook2013; @Westbrook2019], so more research is needed to shed light on this issue.
 
-With he present study, we change <!-- in my opinion better: alter --> one fundamental assumption of the original COG-ED paradigm: That the easiest *n*-back level has the highest SV.
+With the present study, we change <!-- in my opinion better: alter --> one fundamental assumption of the original COG-ED paradigm: That the easiest *n*-back level has the highest SV.
 We therfore adapted the COG-ED paradigm in such a way that it allows the computation of SVs for different *n*-back levels without presuming that all individuals inherently prefer the easiest level.
 Figure\ 1 illustrates how different modifications of the COG-ED paradigm return SVs that do or do not reflect the true preference of a hypothetical participant, who likes 2-back most, 3-back less, and 1-back least.
 The COG-ED paradigm sets the SV of 1-back to 1, regardless of the response pattern.
