--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -1791,7 +1791,7 @@ Study data will be collected and managed using REDCap electronic data capture to
 
 ## Sampling plan
 
-A sample size analysis with *G\*Power* [@Faul2007; @Faul2009], based on the results of the ANOVA of Westbrook et al. [-@Westbrook2013] which showed an increase in reaction time with higher n-back levels, indicated that we should collect data from at least 53 participants, assuming $\eta2=0.04$, $\alpha=.05$, and $\beta=.95$.
+A sample size analysis with *G\*Power* [@Faul2007; @Faul2009], based on the results of the ANOVA of Westbrook et al. [-@Westbrook2013] which showed an increase in reaction time with higher *n*-back levels, indicated that we should collect data from at least 53 participants, assuming $\eta2=0.04$, $\alpha=.05$, and $\beta=.95$. <!-- but can we really rely on Westbrook et al., 2013, when we know the findings of Kramer et al., 2021, who observed only half of the originally reported effect size, and quite rightfully so, because initiallly reported effect sizes are more likely thasn not inflated -->
 The power analyses of all other hypotheses yielded smaller necessary sample sizes.
 To account for technical errors and exclusions of physiological data of the second lab session due to excessive noise, we aim to collect data of 60 to 70 participants.
 
