--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -429,8 +429,7 @@ In everyday life, effort and reward are closely intertwined [@Botvinick2009].
 With each decision a person makes, they have to evaluate whether the effort required to reach a goal is worth being exerted, given the reward they receive when reaching the goal.
 A reward is subjectively more valuable if it is obtained with less effort, so the required effort is used as a reference point for estimating the reward value [@Botvinick2009].
 However, the cost of the effort itself is also subjective, and research has not yet established which function best describes the relationship between effort and cost [@Kool2018].
-Investigating effort and cost is challenging because "effort is not a property of the target task alone, but also a function of the individual's cognitive capacities, as well as the degree of effort voluntarily mobilized for the task, which in turn is a function of the individual's reward sensitivity" [@Kool2018, p. 209].
-<!-- In the last sentence, the page number of the quote should appear with the quote, but given nature.csl does not, so perhaps just insert '(p. 209)' after 'reward sensitivity' -->  
+Investigating effort and cost is challenging because "effort is not a property of the target task alone, but also a function of the individual's cognitive capacities, as well as the degree of effort voluntarily mobilized for the task, which in turn is a function of the individual's reward sensitivity" (p. 209) [@Kool2018].
 
 One task that is often used to investigate effort is the *n*-back task, a working memory task in which a continuous stream of stimuli, e.g. letters, is presented on screen.
 Participants indicate via button press whether the current stimulus is the same as *n* stimuli before, with *n* being the level of difficulty between one and six [@Mackworth1959].
@@ -444,34 +443,34 @@ If they choose the more difficult level, the reward for 1-back increases by 0.50
 This is repeated five more times, with each adjustment of the 1-back reward being half of the previous step, while the reward for the more difficult level remains fixed at 2\$.
 The idea is to estimate the point of subjective equivalence, i.e., the monetary ratio at which both offers are equally preferred [@Westbrook2013].
 The subjective value (SV) of each difficulty level is then calculated by dividing the final reward value of 1-back by the fixed 2\$ reward.
-Westbrook et al. [-@Westbrook2013] <!-- I guess, it is easier to simply write @Westbrook2013 instead of Westbrook et al. [-@Westbrook2013], but this may be a matter arising because of the use of the nature.csl --> used these SVs to investigate inter-individual differences in effort discounting (ED) <!-- perhaps avoid the abbreviation and simply always write effort discounting, we had some issues recently when using abbreviations in a manuscript, but we were using a lot of them, so it may be ok to use one or two here -->.
-Younger participants showed lower ED, i.e., they needed a lower monetary incentive for choosing the more difficult levels over 1-back.
+Westbrook et al. [-@Westbrook2013] used these SVs to investigate inter-individual differences in effort discounting.
+Younger participants showed lower effort discounting, i.e., they needed a lower monetary incentive for choosing the more difficult levels over 1-back.
 
-The individual degree of ED in the study by Westbrook et al. [-@Westbrook2013] was also associated with the participants' scores in Need for Cognition (NFC), a personality trait describing individuals who actively seek and enjoy effortful cognitive activities [@Cacioppo1982].
-Westbrook et al. [-@Westbrook2013] conceptualized NFC as a trait measure of effortful task engagement, providing a subjective self-report of ED for each participant which could then be related to the SVs as an objective measure of ED.
+The individual degree of effort discounting in the study by Westbrook et al. [-@Westbrook2013] was also associated with the participants' scores in Need for Cognition (NFC), a personality trait describing individuals who actively seek and enjoy effortful cognitive activities [@Cacioppo1982].
+Westbrook et al. [-@Westbrook2013] conceptualized NFC as a trait measure of effortful task engagement, providing a subjective self-report of effort discounting for each participant which could then be related to the SVs as an objective measure of effort discounting.
 On the surface, this association stands to reason, as individuals with higher NFC are more motivated to mobilize cognitive effort because they perceive it as intrinsically rewarding.
 Additionally, it has been shown that individuals avoid cognitive effort only to a certain degree, possibly to retain a sense of self-control [@Wu2021], a trait more prominent in individuals with high NFC [@Bertrams2012; @Nishiguchi2016; @Xu2021].
 However, the relation of NFC and SVs might be confounded, since other studies utilizing the COG-ED paradigm found the association of NFC and SVs to disappear after correcting for performance [@Kramer2021] or found no association of NFC and SVs at all [@Crawford2021].
 On the other hand, task load has been shown to be a better predictor of SVs than task performance [@Culbreth2016; @Westbrook2013; @Westbrook2019], so more research is needed to shed light on this issue.
 
-With the present study, we change <!-- in my opinion better: alter --> one fundamental assumption of the original COG-ED paradigm: That the easiest *n*-back level has the highest SV.
-We therfore adapted the COG-ED paradigm in such a way that it allows the computation of SVs for different *n*-back levels without presuming that all individuals inherently prefer the easiest level.
+With the present study, we alter one fundamental assumption of the original COG-ED paradigm: That the easiest *n*-back level has the highest SV.
+We therefore adapted the COG-ED paradigm in such a way that it allows the computation of SVs for different *n*-back levels without presuming that all individuals inherently prefer the easiest level.
 Figure\ 1 illustrates how different modifications of the COG-ED paradigm return SVs that do or do not reflect the true preference of a hypothetical participant, who likes 2-back most, 3-back less, and 1-back least.
 The COG-ED paradigm sets the SV of 1-back to 1, regardless of the response pattern.
 Adding a comparison of 2-back and 3-back allows the SVs of those two levels to be more differentiated, but leaves the SV of 1-back unchanged.
 Adding three more comparisons of the same levels but using the easier level as reference does approach the true preference, but has two disadvantages.
 First, the SVs are still distorted by the SVs returned by the original paradigm, and second, having more task levels would lead to an exponential increase in comparisons.
-Therefore, the solution lies in reducing the number of necessary comparisons by presenting only one ED round for each possible pair of levels, and by starting each round with a choice between equal prices.
+Therefore, the solution lies in reducing the number of necessary comparisons by presenting only one effort discounting round for each possible pair of levels, and by starting each round with a choice between equal prices.
 For example, the participant is presented with the choice of receiving 1€ for 2-back or 1€ for 4-back.
 The level chosen by the participant will then be used as the level with a flexible value, which starts at 1€ and is changed in every iteration.
 The level that was not chosen will be set to a fixed value of 2€.
 This procedure allows to compute SVs based on actual individual preference instead of objective task load.
 Each level's SV is calculated as the mean of this level's SVs from all comparisons in which it appeared.
 If the participant has a clear preference for one level, this level's SV will be 1.
-If not, then no level's SV will be 1, but each level's SV can still be interpreted as an absolute and relative value, so each participant's ED behaviour can still be quantified.
-Since we also aim to establish this paradigm for the assessment of tasks with no objective task load, e.g., emotion regulation tasks <!-- perhaps add ref. to the other ms. on this issue? -->, we call it the Cognitive and Emotion Regulation Effort Discounting Paradigm (CERED). <!-- not sure whether you should call it like this; while it reflects the so-called "Entstehungszusammenhang", it does not necessarily reflect the so-called "Begründungszusammenhang", i.e., the proposed approach goes beyond emotion regulation, but applies to  
+If not, then no level's SV will be 1, but each level's SV can still be interpreted as an absolute and relative value, so each participant's effort discounting behaviour can still be quantified.
+Since we also aim to establish this paradigm for the assessment of tasks with no objective task load, e.g., emotion regulation tasks <!-- perhaps add ref. to the other ms. on this issue? -->, we call it the Cognitive and Emotion Regulation Effort Discounting Paradigm (CERED). <!-- not sure whether you should call it like this; while it reflects the so-called "Entstehungszusammenhang", it does not necessarily reflect the so-called "Begründungszusammenhang", i.e., the proposed approach goes beyond emotion regulation --> 
 In the present study, we will validate the CERED paradigm by conceptually replicating the findings of Westbrook et al. [-@Westbrook2013].
-Additionally, we will compare the ED behaviour of participants regarding the *n*-back task and an emotion regulation task.
+Additionally, we will compare the effort discounting behaviour of participants regarding the *n*-back task and an emotion regulation task.
 The full results of the latter will be published in a second Registered Report<!-- again: add (interim) ref. -->.
 The COG-ED paradigm has been applied to tasks in different domains before, showing that SVs across task domains correlate [@Crawford2021], but these tasks had an objective order of task load, which is not the case for the choice of emotion regulation strategies or other paradigms where there is no objective order of task load.
 
@@ -483,9 +482,9 @@ The COG-ED paradigm has been applied to tasks in different domains before, showi
 
 Our hypotheses were derived from the results of Westbrook et al. [-@Westbrook2013].
 Regarding the associations of subjective and objective task load we hypothesize that (1a) the signal detection parameter *d'* declines with increasing *n*-back level, (1b) reaction time increases with increasing *n*-back level, and (1c) perceived task load increases with increasing *n*-back level.
-Regarding the associations of task load and ED we hypothesize that (2a) SVs decline with increasing *n*-back level, and (2b) they do so even after controlling for declining task performance.
+Regarding the associations of task load and effort discounting we hypothesize that (2a) SVs decline with increasing *n*-back level, and (2b) they do so even after controlling for declining task performance.
 Here we added <!-- why this 'here we added'? --> the hypothesis that (2c) SVs decline stronger with increasing task load for individuals with low compared to high NFC scores,
-and regarding individual differences in ED we hypothesize that (3a) SVs predict individual NFC scores, and (3b) perceived task load does not predict individual NFC scores.
+and regarding individual differences in effort discounting we hypothesize that (3a) SVs predict individual NFC scores, and (3b) perceived task load does not predict individual NFC scores.
 Each hypothesis is detailed in the Design Table in the Appendix. <!-- regarding the Design Table, I have some questions, especially regarding the effect sizes used, they seem unusually large -->
 
 ```{r preprocessing, echo=FALSE, message=FALSE, warning=FALSE}
@@ -1778,22 +1777,23 @@ Several other personality questionnaires will be used in this study but are the 
 A full list of measures can be found in our [Github repository](https://github.com/ChScheffel/CERED).
 In the first session, participants provide informed consent and demographic data before completing the computer-based paradigm.
 The paradigm starts with the n-back levels one to four, presented sequentially with two runs per level, consisting of 64 consonants (16 targets, 48 non-targets) per run.
-The levels are referred to by color (1-back black, 2-back red, 3-back blue, 4-back green) to avoid anchor effects in the ED procedure.
+The levels are referred to by color (1-back black, 2-back red, 3-back blue, 4-back green) to avoid anchor effects in the effort discounting procedure.
 To assess perceived task load, we will use the 6-item NASA Task Load Index (NASA-TLX) [@Hart1988], where participants evaluate their subjective perception of mental load, physical load, effort, frustration, performance, and time pressure during the task on a 20-point scale.
 After each level, participants fill out the NASA-TLX on a tablet.
-Then, they complete the ED procedure on screen, where each possible pairing of the four n-back levels is presented in a randomized order.
+Then, they complete the effort discounting procedure on screen, where each possible pairing of the four n-back levels is presented in a randomized order.
 Participants are instructed to decide as realistically as possible, because one of their choices from the last iteration steps will be randomly chosen for one final run of n-back.
-This is only done to incentivise truthful behavior in the ED procedure, so the n-back data of this part will not be analyzed.
+This is only done to incentivise truthful behavior in the effort discounting procedure, so the n-back data of this part will not be analyzed.
 The second session consists of an emotion regulation task with negative pictures and the instruction to suppress facial reactions, detach cognitively from the picture content, and distract oneself, respectively.
-The paradigm follows the same structure of task and ED procedure, but participants can decide which strategy they want to reapply in the last block.
+The paradigm follows the same structure of task and effort discounting procedure, but participants can decide which strategy they want to reapply in the last block.
 Participants will receive 30€ in total or course credit for participation.
 Study data will be collected and managed using REDCap electronic data capture tools hosted at Technische Universität Dresden [@Harris2009; @Harris2019].
 
 ## Sampling plan
 
-A sample size analysis with *G\*Power* [@Faul2007; @Faul2009], based on the results of the ANOVA of Westbrook et al. [-@Westbrook2013] which showed an increase in reaction time with higher *n*-back levels, indicated that we should collect data from at least 53 participants, assuming $\eta2=0.04$, $\alpha=.05$, and $\beta=.95$. <!-- but can we really rely on Westbrook et al., 2013, when we know the findings of Kramer et al., 2021, who observed only half of the originally reported effect size, and quite rightfully so, because initiallly reported effect sizes are more likely thasn not inflated -->
+As there is no prior evidence on the magnitude of an interaction between *n*-back level and NFC, we assumed a small to medium effect size of $f=.175$.
+A sample size analysis with *G\*Power* [@Faul2007; @Faul2009] for a repeated measures ANOVA with within-between interaction indicated that we should collect data from at least 72 participants, assuming $\alpha=.05$ and $\beta=.95$.
 The power analyses of all other hypotheses yielded smaller necessary sample sizes.
-To account for technical errors and exclusions of physiological data of the second lab session due to excessive noise, we aim to collect data of 60 to 70 participants.
+To account for technical errors and exclusions of physiological data of the second lab session due to excessive noise, we aim to collect data of 90 participants.
 
 ## Analysis plan
 
@@ -1807,7 +1807,7 @@ To test our hypotheses, we will perform a series of rmANOVAs and an MLM with ort
 Declining performance will be investigated by calculating an rmANOVA with three paired contrasts comparing *d'* between two levels of 2-, 3-, and 4-back at a time.
 Another rmANOVA with three paired contrasts will be computed to compare the mean RT between two levels of 2-, 3-, and 4-back at a time.
 To investigate changes in NASA-TLX ratings, six rmANOVAs will be computed, one for each NASA-TLX subscale, and each with six paired contrasts comparing the ratings between two levels of 1-, 2-, 3-, and 4-back at a time.
-For each ED round, SVs will be calculated by adding or subtracting 0.015625 from the last monetary value of the flexible level, depending on the participant's last choice.
+For each effort discounting round, SVs will be calculated by adding or subtracting 0.015625 from the last monetary value of the flexible level, depending on the participant's last choice.
 Then, these final monetary values will be divided by 2€, and the SV of each level per participant will be computed by averaging all final values of each level, regardless of whether it was fixed or flexible.
 An rmANOVA with six paired contrasts will be computed, comparing the SVs between two levels of 1-, 2-, 3-, and 4-back at a time.
 Estimated marginal means will be used for the paired contrasts of each rmANOVA, including Tukey method for *p*-value adjustment.
@@ -1832,10 +1832,10 @@ These pipelines specify which transformation was applied (none, log, inverse, or
 The MLM will be run with each of the 63\ pipelines, which will also include our main pipeline (untransformed data, exclusion of RTs below 100\ ms).
 The ratio of pipelines that lead to significant versus non-significant effects will provide an indication of how robust the effect actually is.
 
-The association of ED and NFC will be examined with a regression using the $AUC$ of each participant's SVs to predict their NFC score.
+The association of effort discounting and NFC will be examined with a regression using the $AUC$ of each participant's SVs to predict their NFC score.
 A second regression will additionally include the mean of the NASA-TLX subscales' $AUCs$ of each participant as a predictor.
 Since we do not have a fixed SV of 1 for 1-back, we cannot apply the "$AUC$" computation of Westbrook et al. [-@Westbrook2013], which was the mean of the $AUCs$ of the SVs of each higher n-back level and 1-back, yielding values between 0\ and\ 1.
-Consequently, we will choose a different way of quantifying the individual degree of ED.
+Consequently, we will choose a different way of quantifying the individual degree of effort discounting.
 A classic $AUC$ cannot differentiate between a subject who prefers 1-back and a subject who prefers 4-back if the magnitude of the ascent is the same, but it can reflect the overall willingness to exert effort.
 This is the opposite for the sum of the ascent between SVs.
 Therefore, we multiply both indicators, arriving at a value reflecting both degree and direction of preference, called $AxAUC$.
