Added Simmons et al. (2012)

--- a/06_Paper/COG-ED/CERED.bib
+++ b/06_Paper/COG-ED/CERED.bib
@@ -678,6 +678,14 @@
   urldate    = {2021-08-02},
 }
 
+@Article{Simmons2012,
+  author     = {J. P. Simmons and L. D. Nelson and U. Simonsohn},
+  year       = {2012},
+  title      = {A 21 word solution},
+  url        = {http://papers.ssrn. com/sol3/papers.cfm?abstract_id=2160588},
+  doi        = {10.2139/ssrn.2160588},
+}
+
 @Article{Simonsohn2020,
   author    = {Simonsohn, Uri and Simmons, Joseph P. and Nelson, Leif D.},
   journal   = {Nature Human Behaviour},
